# SkillHack

./: .gitignore  .pdm-python  README.md  SkillHack\db\main.db  main.py  pyproject.toml  requirements.txt  server.py
db/: main.db
forms/: login_form.py  register_form.py
models/: skills.py  users.py
static/img/: main-img.avif
static/js/: account.js  newFile.js  one_skill.js  progress.js  register.js  script.js  skills.js
static/roadmaps/: roadmap_css.json
static/styles/: all_skills.css  fonts.css  main.css  one_skill.css  profile.css  promo-page.css  register.css  reset.css  root.css  skill.css
templates/: about_us.html  account.html  all_skills.html  base.html  contact_us.html  index.html  promo-page.html  register.html  skill.html
